--- a/SqlTest.Tests/SqlTest.Tests.csproj
+++ b/SqlTest.Tests/SqlTest.Tests.csproj
@@ -12,6 +12,7 @@
 	<ItemGroup>
 		<PackageReference Include="coverlet.collector" Version="3.1.2"/>
 		<PackageReference Include="coverlet.msbuild" Version="3.1.2"/>
+		<PackageReference Include="Dapper" Version="2.0.123"/>
 		<PackageReference Include="DotNet.Testcontainers" Version="1.5.0"/>
 		<PackageReference Include="Microsoft.Data.SqlClient" Version="4.1.0"/>
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0"/>
