--- a/SqlTest.Tests/SqlTest.Tests.csproj
+++ b/SqlTest.Tests/SqlTest.Tests.csproj
@@ -14,8 +14,10 @@
 		<PackageReference Include="coverlet.msbuild" Version="3.1.2"/>
 		<PackageReference Include="Dapper" Version="2.0.123"/>
 		<PackageReference Include="DotNet.Testcontainers" Version="1.5.0"/>
+		<PackageReference Include="LikeComparison" Version="1.0.13"/>
 		<PackageReference Include="Microsoft.Data.SqlClient" Version="4.1.0"/>
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0"/>
+		<PackageReference Include="Microsoft.PowerShell.SDK" Version="7.2.1"/>
 		<PackageReference Include="MSTest.TestAdapter" Version="2.2.8"/>
 		<PackageReference Include="MSTest.TestFramework" Version="2.2.8"/>
 	</ItemGroup>
