--- a/SqlTest/SqlTest.csproj
+++ b/SqlTest/SqlTest.csproj
@@ -19,4 +19,7 @@
 		<None Include="../License" Pack="true" Visible="false" PackagePath=""/>
 		<None Include="../README.md" Pack="true" PackagePath=""/>
 	</ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.PowerShell.SDK" Version="7.2.2"/>
+	</ItemGroup>
 </Project>
