--- a/SqlTest/SqlTest.csproj
+++ b/SqlTest/SqlTest.csproj
@@ -21,5 +21,6 @@
 	</ItemGroup>
 	<ItemGroup>
 		<PackageReference Include="Microsoft.PowerShell.SDK" Version="7.2.2"/>
+		<PackageReference Include="System.CommandLine" Version="2.0.0-beta3.22114.1"/>
 	</ItemGroup>
 </Project>
