--- a/SqlTest/SqlTest.csproj
+++ b/SqlTest/SqlTest.csproj
@@ -20,6 +20,7 @@
 		<None Include="../README.md" Pack="true" PackagePath=""/>
 	</ItemGroup>
 	<ItemGroup>
+		<PackageReference Include="DotNet.Testcontainers" Version="1.5.0"/>
 		<PackageReference Include="Microsoft.PowerShell.SDK" Version="7.2.2"/>
 		<PackageReference Include="System.CommandLine" Version="2.0.0-beta3.22114.1"/>
 	</ItemGroup>
