--- a/.github/workflows/onPushMain.yml
+++ b/.github/workflows/onPushMain.yml
@@ -11,13 +11,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    timeout-minutes: 15
     steps:
-      - uses: actions/checkout@master
-      - name: Setup dotnet
-        uses: actions/setup-dotnet@master
-        with:
-          dotnet-version: '6.0'
+      - uses: actions/checkout@v2
       - name: Run unit tests
         run: dotnet test SqlTest.Tests --configuration Release /p:CollectCoverage=true /p:CoverletOutputFormat=lcov
       - name: Run coveralls.io
