--- a/SqlTest.Tests/SqlTest.Tests.csproj
+++ b/SqlTest.Tests/SqlTest.Tests.csproj
@@ -14,7 +14,7 @@
 		<PackageReference Include="coverlet.msbuild" Version="3.1.2"/>
 		<PackageReference Include="LikeComparison" Version="1.1.1"/>
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0"/>
-		<PackageReference Include="MSTest.TestAdapter" Version="2.2.9"/>
-		<PackageReference Include="MSTest.TestFramework" Version="2.2.9"/>
+		<PackageReference Include="MSTest.TestAdapter" Version="2.2.10-preview-20220414-01"/>
+		<PackageReference Include="MSTest.TestFramework" Version="2.2.10-preview-20220414-01"/>
 	</ItemGroup>
 </Project>
