--- a/SqlTest/SqlTest.csproj
+++ b/SqlTest/SqlTest.csproj
@@ -25,6 +25,7 @@
 		<PackageReference Include="LikeComparison" Version="1.1.1"/>
 		<PackageReference Include="Microsoft.Data.SqlClient" Version="4.1.0"/>
 		<PackageReference Include="Microsoft.PowerShell.SDK" Version="7.2.2"/>
+		<PackageReference Include="SQLCoverLib" Version="0.6.0-preview1"/>
 		<PackageReference Include="System.CommandLine" Version="2.0.0-beta3.22114.1"/>
 	</ItemGroup>
 </Project>
