--- a/SqlTest.Tests/SqlTest.Tests.csproj
+++ b/SqlTest.Tests/SqlTest.Tests.csproj
@@ -4,17 +4,13 @@
 		<IsPackable>false</IsPackable>
 	</PropertyGroup>
 	<ItemGroup>
-		<Using Include="Microsoft.VisualStudio.TestTools.UnitTesting"/>
-	</ItemGroup>
-	<ItemGroup>
 		<ProjectReference Include="..\SqlTest\SqlTest.csproj"/>
-	</ItemGroup>
-	<ItemGroup>
+		<Using Include="Microsoft.VisualStudio.TestTools.UnitTesting"/>
 		<PackageReference Include="coverlet.collector" Version="3.1.2"/>
 		<PackageReference Include="coverlet.msbuild" Version="3.1.2"/>
 		<PackageReference Include="LikeComparison" Version="1.1.1"/>
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0"/>
-		<PackageReference Include="MSTest.TestAdapter" Version="2.2.10-preview-20220414-01"/>
-		<PackageReference Include="MSTest.TestFramework" Version="2.2.10-preview-20220414-01"/>
+		<PackageReference Include="MSTest.TestAdapter" Version="2.2.10"/>
+		<PackageReference Include="MSTest.TestFramework" Version="2.2.10"/>
 	</ItemGroup>
 </Project>
