--- a/Database.Tests/Collation/Database.Tests.csproj
+++ b/Database.Tests/Collation/Database.Tests.csproj
@@ -1,11 +1,6 @@
 <Project Sdk="MSBuild.Sdk.SqlProj/2.0.0">
     <PropertyGroup>
-        <TargetFramework>net6.0</TargetFramework>
-        <SqlServerVersion>Sql150</SqlServerVersion>
-        <ProduceReferenceAssembly>false</ProduceReferenceAssembly>
+        <PackageId>Database.Tests/Collation</PackageId>
         <Collation>Polish_CI_AS</Collation>
     </PropertyGroup>
-    <ItemGroup>
-        <PackageReference Include="tSQLt.Edge" Version="0.7.3" />
-    </ItemGroup>
 </Project>
