--- a/Database.Tests/Ok/Database.Tests.csproj
+++ b/Database.Tests/Ok/Database.Tests.csproj
@@ -1,10 +1,5 @@
 <Project Sdk="MSBuild.Sdk.SqlProj/2.0.0">
     <PropertyGroup>
-        <TargetFramework>net6.0</TargetFramework>
-        <SqlServerVersion>Sql150</SqlServerVersion>
-        <ProduceReferenceAssembly>false</ProduceReferenceAssembly>
+        <PackageId>Database.Tests/Ok</PackageId>
     </PropertyGroup>
-    <ItemGroup>
-        <PackageReference Include="tSQLt.Edge" Version="0.7.3" />
-    </ItemGroup>
 </Project>
