--- a/SqlTest.Tests/SqlTest.Tests.csproj
+++ b/SqlTest.Tests/SqlTest.Tests.csproj
@@ -5,7 +5,11 @@
 	</PropertyGroup>
 	<ItemGroup>
 		<ProjectReference Include="..\SqlTest\SqlTest.csproj"/>
+	</ItemGroup>
+	<ItemGroup>
 		<Using Include="Microsoft.VisualStudio.TestTools.UnitTesting"/>
+	</ItemGroup>
+	<ItemGroup>
 		<PackageReference Include="coverlet.collector" Version="3.1.2"/>
 		<PackageReference Include="coverlet.msbuild" Version="3.1.2"/>
 		<PackageReference Include="LikeComparison" Version="1.1.1"/>
