--- a/SqlTest/SqlTest.csproj
+++ b/SqlTest/SqlTest.csproj
@@ -18,6 +18,8 @@
 		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All"/>
 		<None Include="../License" Pack="true" Visible="false" PackagePath=""/>
 		<None Include="../README.md" Pack="true" PackagePath=""/>
+	</ItemGroup>
+	<ItemGroup>
 		<PackageReference Include="Dapper" Version="2.0.123"/>
 		<PackageReference Include="DotNet.Testcontainers" Version="1.6.0-beta.2197"/>
 		<PackageReference Include="LikeComparison" Version="1.1.1"/>
