--- a/SqlTest.Tests/SqlTest.Tests.csproj
+++ b/SqlTest.Tests/SqlTest.Tests.csproj
@@ -6,14 +6,17 @@
         <ProjectReference Include="..\SqlTest\SqlTest.csproj"/>
     </ItemGroup>
     <ItemGroup>
+        <PackageReference Include="coverlet.collector" Version="3.1.2"/>
+        <PackageReference Include="coverlet.msbuild" Version="3.1.2"/>
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.2.0"/>
+    </ItemGroup>
+    <ItemGroup>
         <Using Include="Microsoft.VisualStudio.TestTools.UnitTesting"/>
         <PackageReference Include="MSTest.TestAdapter" Version="2.2.10"/>
         <PackageReference Include="MSTest.TestFramework" Version="2.2.10"/>
     </ItemGroup>
     <ItemGroup>
-        <PackageReference Include="coverlet.collector" Version="3.1.2"/>
-        <PackageReference Include="coverlet.msbuild" Version="3.1.2"/>
+        <Using Include="LikeComparison.TransactSql"/>
         <PackageReference Include="LikeComparison" Version="1.1.1"/>
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0"/>
     </ItemGroup>
 </Project>
