Add Central Package Management (CPM) support

--- a/Database.Tests/Directory.Build.props
+++ b/Database.Tests/Directory.Build.props
@@ -5,6 +5,6 @@
         <ProduceReferenceAssembly>false</ProduceReferenceAssembly>
     </PropertyGroup>
     <ItemGroup>
-        <PackageReference Include="tSQLt.Edge" Version="0.7.5" />
+        <PackageReference Include="tSQLt.Edge"/>
     </ItemGroup>
 </Project>
