--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -7,6 +7,6 @@
         <CodeAnalysisRuleSet>../StyleCop.ruleset</CodeAnalysisRuleSet>
     </PropertyGroup>
     <ItemGroup>
-        <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.435" PrivateAssets="All"/>
+        <PackageReference Include="StyleCop.Analyzers" PrivateAssets="All" />
     </ItemGroup>
 </Project>
