--- a/SqlTest.Tests/SqlTest.Tests.csproj
+++ b/SqlTest.Tests/SqlTest.Tests.csproj
@@ -6,17 +6,17 @@
         <ProjectReference Include="..\SqlTest\SqlTest.csproj"/>
     </ItemGroup>
     <ItemGroup>
-        <PackageReference Include="coverlet.collector" Version="3.1.2"/>
-        <PackageReference Include="coverlet.msbuild" Version="3.1.2"/>
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.2.0"/>
+        <PackageReference Include="coverlet.collector"/>
+        <PackageReference Include="coverlet.msbuild"/>
+        <PackageReference Include="Microsoft.NET.Test.Sdk"/>
     </ItemGroup>
     <ItemGroup>
         <Using Include="Microsoft.VisualStudio.TestTools.UnitTesting"/>
-        <PackageReference Include="MSTest.TestAdapter" Version="2.2.10"/>
-        <PackageReference Include="MSTest.TestFramework" Version="2.2.10"/>
+        <PackageReference Include="MSTest.TestAdapter"/>
+        <PackageReference Include="MSTest.TestFramework"/>
     </ItemGroup>
     <ItemGroup>
         <Using Include="LikeComparison.TransactSql"/>
-        <PackageReference Include="LikeComparison" Version="1.1.1"/>
+        <PackageReference Include="LikeComparison"/>
     </ItemGroup>
 </Project>
