--- a/SqlTest.Tests/SqlTest.Tests.csproj
+++ b/SqlTest.Tests/SqlTest.Tests.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <IsPackable>false</IsPackable>
+        <LangVersion>preview</LangVersion>
     </PropertyGroup>
     <ItemGroup>
         <ProjectReference Include="..\SqlTest\SqlTest.csproj"/>
