--- a/SqlTest/SqlTest.csproj
+++ b/SqlTest/SqlTest.csproj
@@ -5,7 +5,7 @@
         <ToolCommandName>sqltest</ToolCommandName>
         <PackageId>dotnet-sqltest</PackageId>
         <Authors>Krzysztof Strugiński</Authors>
-        <Description>dotnet-sqltest</Description>
+        <Description>Command line tool for running tSQLt unit tests from MSBuild.Sdk.SqlProj projects inside throwaway instances of Docker containers for all compatible SQL Server or Azure SQL Edge images.</Description>
         <PackageLicenseFile>License</PackageLicenseFile>
         <PackageReadmeFile>README.md</PackageReadmeFile>
         <PublishRepositoryUrl>true</PublishRepositoryUrl>
