--- a/.github/workflows/onPushTags.yml
+++ b/.github/workflows/onPushTags.yml
@@ -13,6 +13,6 @@ jobs:
       - name: Get version from tag
         run: echo "VERSION=${GITHUB_REF/refs\/tags\/}" >> $GITHUB_ENV
       - name: Pack
-        run: dotnet pack SqlTest --configuration Release /p:Version=${VERSION} /p:ContinuousIntegrationBuild=true --output .
+        run: dotnet pack SqlTest --configuration Release -e Version=${VERSION} -e ContinuousIntegrationBuild=true --output .
       - name: NuGet push
         run: dotnet nuget push dotnet-sqltest.${VERSION}.nupkg --api-key ${{ secrets.NUGET_APIKEY }} --source https://api.nuget.org/v3/index.json
