--- a/.github/workflows/onPushMain.yml
+++ b/.github/workflows/onPushMain.yml
@@ -13,6 +13,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - name: Setup dotnet
+        uses: actions/setup-dotnet@master
+        with:
+          dotnet-version: '7.0'
       - name: Run unit tests
         run: dotnet test SqlTest.Tests --configuration Release -e CollectCoverage=true -e CoverletOutputFormat=lcov
       - name: Run coveralls.io
@@ -27,6 +31,10 @@ jobs:
       IMAGE_NAME: cagrin/mssql-server-ltsc2022:2019-latest
     steps:
       - uses: actions/checkout@v3
+      - name: Setup dotnet
+        uses: actions/setup-dotnet@master
+        with:
+          dotnet-version: '7.0'
       - name: Pull image
         run: docker pull ${{env.IMAGE_NAME}}
       - name: Run simple tests
