--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -7,10 +7,11 @@
         <PackageVersion Include="coverlet.msbuild" Version="3.2.0"/>
         <PackageVersion Include="Dapper" Version="2.0.123"/>
         <PackageVersion Include="Testcontainers" Version="2.2.0"/>
-        <PackageVersion Include="LikeComparison" Version="1.2.1"/>
+        <PackageVersion Include="LikeComparison" Version="1.3.0"/>
         <PackageVersion Include="Microsoft.Data.SqlClient" Version="5.0.1"/>
         <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.4.0"/>
-        <PackageVersion Include="Microsoft.PowerShell.SDK" Version="7.2.7"/>
+        <PackageVersion Include="Microsoft.PowerShell.SDK" Version="7.2.7" Condition="'$(TargetFramework)' == 'net6.0'"/>
+        <PackageVersion Include="Microsoft.PowerShell.SDK" Version="7.3.0" Condition="'$(TargetFramework)' == 'net7.0'"/>
         <PackageVersion Include="Microsoft.SourceLink.GitHub" Version="1.1.1"/>
         <PackageVersion Include="Moq" Version="4.18.2"/>
         <PackageVersion Include="MSTest.TestAdapter" Version="2.2.10"/>
