--- a/.github/workflows/onPushMain.yml
+++ b/.github/workflows/onPushMain.yml
@@ -27,25 +27,19 @@ jobs:
       - uses: actions/checkout@v3
       - name: Run unit tests
         run: dotnet test ./SqlTest.Tests --framework net7.0 --configuration Release -e CollectCoverage=true -e CoverletOutputFormat=lcov --logger "console;verbosity=normal"
-  simple-test-on-windows-net6:
+  simple-test-on-windows:
+    strategy:
+      matrix:
+        include:
+          - framework: net6.0
+            image: cagrin/mssql-server-ltsc2022:2019-latest
+          - framework: net7.0
+            image: cagrin/mssql-server-ltsc2022:2022-latest
     runs-on: windows-latest
-    env:
-      IMAGE_NAME: cagrin/mssql-server-ltsc2022:2019-latest
     steps:
       - uses: actions/checkout@v3
       - name: Pull image
-        run: docker pull ${{env.IMAGE_NAME}}
+        run: docker pull ${{ matrix.image }}
       - name: Run simple tests
         shell: pwsh
-        run: dotnet run --project SqlTest --framework net6.0 -- runall --image ${{env.IMAGE_NAME}} --windows-container --project Database.Tests/Ok
-  simple-test-on-windows-net7:
-    runs-on: windows-latest
-    env:
-      IMAGE_NAME: cagrin/mssql-server-ltsc2022:2022-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Pull image
-        run: docker pull ${{env.IMAGE_NAME}}
-      - name: Run simple tests
-        shell: pwsh
-        run: dotnet run --project SqlTest --framework net7.0 -- runall --image ${{env.IMAGE_NAME}} --windows-container --project Database.Tests/Ok
+        run: dotnet run --project SqlTest --framework ${{ matrix.framework }} -- runall --image ${{ matrix.image }} --windows-container --project Database.Tests/Ok
