--- a/.github/workflows/onPushMain.yml
+++ b/.github/workflows/onPushMain.yml
@@ -32,6 +32,8 @@ jobs:
             image: cagrin/mssql-server-ltsc2022:2019-latest
           - framework: net7.0
             image: cagrin/mssql-server-ltsc2022:2022-latest
+          - framework: net8.0
+            image: cagrin/mssql-server-ltsc2022:2022-latest
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v3
