--- a/.github/workflows/onPushTest.yml
+++ b/.github/workflows/onPushTest.yml
@@ -1,7 +1,6 @@
 name: Test in Dev Container
 
 on:
-  pull_request:
   push:
     branches:
       - main
@@ -14,6 +13,4 @@ jobs:
       - name: Run unit tests
         uses: devcontainers/ci@v0.3
         with:
-          runCmd: |
-            pwsh
-            dotnet test ./SqlTest.Tests --framework net6.0 -e CollectCoverage=true -e CoverletOutputFormat=lcov --filter "(ClassName!~SqlTest.DatabaseTests)"
+          runCmd: dotnet test ./SqlTest.Tests --framework net6.0 --configuration Release -e CollectCoverage=true -e CoverletOutputFormat=lcov --logger "console;verbosity=normal"
