--- a/.github/workflows/onPushMain.yml
+++ b/.github/workflows/onPushMain.yml
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  build:
+  Build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -15,7 +15,7 @@ jobs:
           dotnet-version: '8.0.x'
       - name: Build
         run: dotnet build ./SqlTest
-  test:
+  Test:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -33,3 +33,14 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           path-to-lcov: ./SqlTest.Tests/coverage.net6.0.info
+  Test in Dev Container:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        framework: [net6.0, net7.0, net8.0]
+    steps:
+      - uses: actions/checkout@v4
+      - name: Run unit tests
+        uses: devcontainers/ci@v0.3
+        with:
+          runCmd: dotnet test ./SqlTest.Tests --framework ${{ matrix.framework }} --configuration Release -e CollectCoverage=true -e CoverletOutputFormat=lcov --logger "console;verbosity=normal"
