--- a/.github/workflows/onPushMain.yml
+++ b/.github/workflows/onPushMain.yml
@@ -33,7 +33,8 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           path-to-lcov: ./SqlTest.Tests/coverage.net6.0.info
-  Test in Dev Container:
+  Test2:
+    name: Test in Dev Container
     runs-on: ubuntu-latest
     strategy:
       matrix:
