Add Testcontainers.SqlEdge variant

--- a/SqlTest/SqlTest.csproj
+++ b/SqlTest/SqlTest.csproj
@@ -26,6 +26,7 @@
         <PackageReference Include="System.CommandLine"/>
         <PackageReference Include="Testcontainers"/>
         <PackageReference Include="Testcontainers.MsSql"/>
+        <PackageReference Include="Testcontainers.SqlEdge"/>
     </ItemGroup>
     <ItemGroup>
         <Using Include="LikeComparison.TransactSql"/>
