--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -22,6 +22,7 @@
         <PackageVersion Include="System.CommandLine" Version="2.0.0-beta4.22272.1"/>
         <PackageVersion Include="Testcontainers" Version="3.5.0"/>
         <PackageVersion Include="Testcontainers.MsSql" Version="3.5.0"/>
+        <PackageVersion Include="Testcontainers.SqlEdge" Version="3.5.0"/>
         <PackageVersion Include="tSQLt.Edge" Version="0.9.5"/>
     </ItemGroup>
 </Project>
