--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -14,8 +14,9 @@
         <PackageVersion Include="Microsoft.PowerShell.SDK" Condition="'$(TargetFramework)' == 'net8.0'" Version="7.4.1" />
         <PackageVersion Include="Microsoft.SourceLink.GitHub" Version="8.0.0"/>
         <PackageVersion Include="Moq" Version="4.20.70"/>
-        <PackageVersion Include="MSTest.TestAdapter" Version="3.1.1"/>
-        <PackageVersion Include="MSTest.TestFramework" Version="3.1.1"/>
+        <PackageVersion Include="MSTest.Analyzers" Version="3.2.0"/>
+        <PackageVersion Include="MSTest.TestAdapter" Version="3.2.0"/>
+        <PackageVersion Include="MSTest.TestFramework" Version="3.2.0"/>
         <PackageVersion Include="SQLCoverLib" Version="0.6.0-preview6"/>
         <PackageVersion Include="StyleCop.Analyzers" Version="1.2.0-beta.556"/>
         <PackageVersion Include="System.CommandLine" Version="2.0.0-beta4.22272.1"/>
