--- a/SqlTest/SqlTest.csproj
+++ b/SqlTest/SqlTest.csproj
@@ -24,6 +24,7 @@
         <PackageReference Include="Microsoft.PowerShell.SDK"/>
         <PackageReference Include="SQLCoverLib"/>
         <PackageReference Include="System.CommandLine"/>
+        <PackageReference Include="System.CommandLine.NamingConventionBinder"/>
         <PackageReference Include="Testcontainers"/>
         <PackageReference Include="Testcontainers.MsSql"/>
         <PackageReference Include="Testcontainers.SqlEdge"/>
