--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -20,6 +20,7 @@
         <PackageVersion Include="SQLCoverLib" Version="0.6.0-preview6"/>
         <PackageVersion Include="StyleCop.Analyzers" Version="1.2.0-beta.556"/>
         <PackageVersion Include="System.CommandLine" Version="2.0.0-beta4.22272.1"/>
+        <PackageVersion Include="System.CommandLine.NamingConventionBinder" Version="2.0.0-beta4.22272.1" />
         <PackageVersion Include="Testcontainers" Version="3.7.0"/>
         <PackageVersion Include="Testcontainers.MsSql" Version="3.7.0"/>
         <PackageVersion Include="Testcontainers.SqlEdge" Version="3.7.0"/>
