--- a/ProjectReferences.Tests/Test/TestProject.csproj
+++ b/ProjectReferences.Tests/Test/TestProject.csproj
@@ -5,6 +5,7 @@
     <ItemGroup>
         <ProjectReference Include="../Main/MainProject.csproj" />
         <ProjectReference Include="../Other/OtherProject.csproj" DatabaseVariableLiteralValue="OtherDatabase" />
+        <ProjectReference Include="../Second/SecondProject.csproj" DatabaseVariableLiteralValue="SecondDatabase" />
         <PackageReference Include="tSQLt.Edge" />
     </ItemGroup>
 </Project>
