--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -16,6 +16,7 @@
         <PackageVersion Include="MSTest.TestAdapter" Version="3.3.1"/>
         <PackageVersion Include="MSTest.TestFramework" Version="3.3.1"/>
         <PackageVersion Include="SQLCoverLib" Version="0.6.0-preview6"/>
+        <PackageVersion Include="Shouldly" Version="4.2.1"/>
         <PackageVersion Include="StyleCop.Analyzers" Version="1.2.0-beta.556"/>
         <PackageVersion Include="System.CommandLine" Version="2.0.0-beta4.22272.1"/>
         <PackageVersion Include="System.CommandLine.NamingConventionBinder" Version="2.0.0-beta4.22272.1" />
