--- a/SqlTest.Tests/SqlTest.Tests.csproj
+++ b/SqlTest.Tests/SqlTest.Tests.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
+        <IsTestProject>true</IsTestProject>
         <IsPackable>false</IsPackable>
-        <LangVersion>preview</LangVersion>
     </PropertyGroup>
     <ItemGroup>
         <Using Include="SqlTest"/>
