Update MSBuild.Sdk.SqlProj to 3.2.0

--- a/Database.Tests/Directory.Build.props
+++ b/Database.Tests/Directory.Build.props
@@ -1,6 +1,6 @@
 <Project>
     <PropertyGroup>
-        <TargetFramework>netstandard2.1</TargetFramework>
+        <TargetFramework>net8.0</TargetFramework>
         <SqlServerVersion>Sql150</SqlServerVersion>
         <ProduceReferenceAssembly>false</ProduceReferenceAssembly>
     </PropertyGroup>
