--- a/ProjectReferences.Tests/Main/MainProject.csproj
+++ b/ProjectReferences.Tests/Main/MainProject.csproj
@@ -1,6 +1,6 @@
-<Project Sdk="MSBuild.Sdk.SqlProj/3.1.3">
+<Project Sdk="MSBuild.Sdk.SqlProj/3.2.0">
     <PropertyGroup>
-        <TargetFramework>netstandard2.1</TargetFramework>
+        <TargetFramework>net8.0</TargetFramework>
     </PropertyGroup>
     <ItemGroup>
         <ProjectReference Include="../Other/OtherProject.csproj" DatabaseVariableLiteralValue="OtherDatabase" />
