--- a/ProjectReferences.Tests/Second/SecondProject.csproj
+++ b/ProjectReferences.Tests/Second/SecondProject.csproj
@@ -1,5 +1,5 @@
-<Project Sdk="MSBuild.Sdk.SqlProj/3.1.3">
+<Project Sdk="MSBuild.Sdk.SqlProj/3.2.0">
     <PropertyGroup>
-        <TargetFramework>netstandard2.1</TargetFramework>
+        <TargetFramework>net8.0</TargetFramework>
     </PropertyGroup>
 </Project>
