Update MSBuild.Sdk.SqlProj to 3.3.0

--- a/Database.Tests/Fail/Database.Tests.csproj
+++ b/Database.Tests/Fail/Database.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="MSBuild.Sdk.SqlProj/3.2.0">
+<Project Sdk="MSBuild.Sdk.SqlProj">
     <PropertyGroup>
         <PackageId>Database.Tests/Fail</PackageId>
     </PropertyGroup>
