--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,7 +3,8 @@
     "features": {
         "ghcr.io/devcontainers/features/docker-in-docker": {},
         "ghcr.io/devcontainers/features/dotnet": {
-            "version": "8.0"
+            "version": "10.0",
+            "additionalVersions": "8.0, 9.0"
         },
         "ghcr.io/devcontainers/features/powershell": {},
         "./dotnet-outdated-tool": {}
@@ -11,10 +12,7 @@
     "customizations": {
         "vscode": {
             "extensions": [
-				"ms-dotnettools.csdevkit",
-				"ms-dotnettools.csharp",
-				"ms-dotnettools.vscodeintellicode-csharp",
-				"ms-dotnettools.vscode-dotnet-runtime"
+				"ms-dotnettools.csdevkit"
 			]
         }
     }
