--- a/ProjectReferences.Tests/Test/TestProject.csproj
+++ b/ProjectReferences.Tests/Test/TestProject.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="MSBuild.Sdk.SqlProj/3.2.0">
+<Project Sdk="MSBuild.Sdk.SqlProj">
     <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
     </PropertyGroup>
