--- a/.github/workflows/onPushMain.yml
+++ b/.github/workflows/onPushMain.yml
@@ -17,7 +17,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        framework: [net8.0]
+        framework: [net8.0, net10.0]
     steps:
       - uses: actions/checkout@v6
       - uses: devcontainers/ci@v0.3
@@ -26,12 +26,12 @@ jobs:
   coverage:
     runs-on: ubuntu-latest
     env:
-      framework: net8.0
+      framework: net10.0
     steps:
       - uses: actions/checkout@v6
       - uses: actions/setup-dotnet@v5
         with:
-          dotnet-version: '8.0.x'
+          dotnet-version: '10.0.x'
       - name: Run tests and collect coverage
         run: dotnet test SqlTest.Tests --framework ${{ env.framework }} --configuration Release -e CollectCoverage=true -e CoverletOutputFormat=lcov
       - uses: coverallsapp/github-action@master
