--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -6,20 +6,20 @@
         <PackageVersion Include="coverlet.collector" Version="6.0.4"/>
         <PackageVersion Include="coverlet.msbuild" Version="6.0.4"/>
         <PackageVersion Include="Dapper" Version="2.1.66"/>
-        <PackageVersion Include="LikeComparison" Version="2.3.2"/>
-        <PackageVersion Include="LikeComparison.MSTest" Version="2.3.2"/>
+        <PackageVersion Include="LikeComparison" Version="2.4.0"/>
+        <PackageVersion Include="LikeComparison.MSTest" Version="2.4.0"/>
         <PackageVersion Include="Microsoft.Data.SqlClient" Version="6.1.3"/>
         <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="18.0.1"/>
         <PackageVersion Include="Microsoft.SourceLink.GitHub" Version="8.0.0"/>
         <PackageVersion Include="Moq" Version="4.20.72"/>
-        <PackageVersion Include="MSTest.Analyzers" Version="3.11.0"/>
-        <PackageVersion Include="MSTest.TestAdapter" Version="3.11.0"/>
-        <PackageVersion Include="MSTest.TestFramework" Version="3.11.0"/>
-        <PackageVersion Include="SQLCoverLib" Version="0.6.0-preview7"/>
+        <PackageVersion Include="MSTest.Analyzers" Version="4.0.2"/>
+        <PackageVersion Include="MSTest.TestAdapter" Version="4.0.2"/>
+        <PackageVersion Include="MSTest.TestFramework" Version="4.0.2"/>
+        <PackageVersion Include="SQLCoverLib" Version="2.0.0"/>
         <PackageVersion Include="Shouldly" Version="4.3.0"/>
         <PackageVersion Include="StyleCop.Analyzers" Version="1.2.0-beta.556"/>
         <PackageVersion Include="System.CommandLine" Version="2.0.1"/>
-        <PackageVersion Include="Testcontainers" Version="4.7.0"/>
-        <PackageVersion Include="Testcontainers.MsSql" Version="4.7.0"/>
+        <PackageVersion Include="Testcontainers" Version="4.9.0"/>
+        <PackageVersion Include="Testcontainers.MsSql" Version="4.9.0"/>
     </ItemGroup>
 </Project>
